force-app/main/default/objects/Apttus_Config2__IncentiveLimitData__c/Apttus_Config2__IncentiveLimitData__c.object-meta.xml
<CustomObject>
    <description>Represents a single limit data row associated with the incentive limit</description>
    <label>Incentive Limit Data</label>
    <nameField>
        <displayFormat>LD-{00000000}</displayFormat>
        <label>Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Limit Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>