force-app/main/default/objects/Apttus_Config2__IncentiveLimitData__c/fields/Apttus_Config2__LimitId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LimitId__c</fullName>
    <description>ID of the associated incentive limit</description>
    <inlineHelpText>ID of the associated incentive limit</inlineHelpText>
    <label>Limit</label>
    <referenceTo>Apttus_Config2__IncentiveLimit__c</referenceTo>
    <relationshipLabel>Limit Data</relationshipLabel>
    <relationshipName>LimitData</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>