force-app/main/default/objects/Apttus_Config2__IncentiveLimitData__c/fields/Apttus_Config2__LimitValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LimitValue__c</fullName>
    <description>The limit value</description>
    <inlineHelpText>The limit value</inlineHelpText>
    <label>Limit Value</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>